name: clisp-wrap
version: 0.0.5
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
homepage: https://github.com/kisp/clisp-wrap
synopsis: Wrapper around clisp for fast script execution with (on demand compiled and cached) libraries.
description:  
data-dir: ""
 
executable clisp-wrap
    build-depends: base, directory, unix, process, bytestring, cryptohash
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
